Added description of improved currently-edited sequence highlighting feature for pending Sequencer64 v 0.9.11.

--- a/tex/seq64_pattern_editor.tex
+++ b/tex/seq64_pattern_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-04-16
+% \update      2016-05-05
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -430,6 +430,10 @@
    The new scales added in \textsl{Sequencer64} are
    \textbf{Harmonic Minor}, \textbf{Melodic Minor}, and \textbf{Whole Tone}.
    Please let us know of any mistakes found in the new scales.
+   Also please note that the \textbf{Melodic Minor} scale is supposed to
+   descend in the same was as the natural \textbf{Minor} scale, but
+   currently there is no way to support that trick in
+   \textsl{Sequencer64}.
 
 \begin{figure}[H]
    \centering 
